# purus-pkg

./: .gitignore  CHANGELOG.md  README.md  build.nix  cabal.project  flake.nix  pkgs.nix  pre-commit.nix  purus-pkg.cabal  purus-pkg.nix
apps/: build.nix
apps/prelude/: Prelude.purs  build.nix  package.json
docs/: catalyst-milestone-6.md
purus-pkg/: LICENSE  purus-pkg.cabal
purus-pkg-local-registry/: CHANGELOG.md  LICENSE  purus-pkg-local-registry.cabal
purus-pkg-local-registry/app/: Main.hs
purus-pkg-local-registry/src/PurusPkg/: LocalRegistry.hs
purus-pkg-local-registry/src/PurusPkg/LocalRegistry/: Cli.hs
purus-pkg/app/: Main.hs
purus-pkg/src/: PurusPkg.hs
purus-pkg/src/PurusPkg/: Cli.hs  Logger.hs  Package.hs  Registries.hs  Solver.hs
purus-pkg/test/: Main.hs
purus-pkg/test/PurusPkg/Package/: Test.hs
purus-pkg/test/PurusPkg/Solver/: Test.hs
src/: PurusPkg.hs
src/PurusPkg/: Package.hs
templates/: build.nix
templates/default/: .gitignore  Makefile  README.md  flake.nix  package.json
templates/default/src/: Main.purs
test/: Main.hs
test/PurusPkg/Package/: Test.hs
testsuites/: build.nix
